@@ -21,11 +21,8 @@ EXTRA_DIST = \
 	makefile.msc
 
 if HAVE_LCMS
-colorsel_cmyk_module = libcolorsel_cmyk_lcms.la
 cdisplay_lcms_module = libcdisplay_lcms.la
 cdisplay_proof_module = libcdisplay_proof.la
-else
-colorsel_cmyk_module = libcolorsel_cmyk.la
 endif
 
 if HAVE_LINUX_INPUT
@@ -33,7 +30,7 @@ controller_linux_input_module = libcontroller_linux_input.la
 endif
 
 lib_LTLIBRARIES = \
-	$(colorsel_cmyk_module)		\
+	libcolorsel_cmyk.la		\
 	libcolorsel_triangle.la		\
 	libcolorsel_water.la		\
 	libcdisplay_colorblind.la	\
@@ -51,13 +48,15 @@ colorsel_libadd = $(libgimpcolor) $(modules_libadd)
 cdisplay_libadd = $(libgimpbase) $(libgimpconfig) $(modules_libadd)
 controller_libadd = $(modules_libadd)
 
+if HAVE_LCMS
+libcolorsel_cmyk_la_SOURCES = colorsel_cmyk_lcms.c
+libcolorsel_cmyk_la_LIBADD = $(libgimpconfig) $(colorsel_libadd) $(LCMS_LIBS)
+else
 libcolorsel_cmyk_la_SOURCES = colorsel_cmyk.c
-libcolorsel_cmyk_la_LDFLAGS = -avoid-version -module $(no_undefined)
 libcolorsel_cmyk_la_LIBADD = $(colorsel_libadd)
+endif
 
-libcolorsel_cmyk_lcms_la_SOURCES = colorsel_cmyk_lcms.c
-libcolorsel_cmyk_lcms_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcolorsel_cmyk_lcms_la_LIBADD = $(libgimpconfig) $(colorsel_libadd) $(LCMS_LIBS)
+libcolorsel_cmyk_la_LDFLAGS = -avoid-version -module $(no_undefined)
 
 libcolorsel_triangle_la_SOURCES = colorsel_triangle.c
 libcolorsel_triangle_la_LDFLAGS = -avoid-version -module $(no_undefined)
